--- a/static/index.html
+++ b/static/index.html
@@ -7,11 +7,24 @@
         <!-- UIkit JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit-icons.min.js"></script>
+
+        <!-- ChartJS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     </head>
     <body>
         <div class="uk-container">
             <div class="uk-card uk-card-default uk-card-body">
                 <ul uk-accordion>
+                    <li class="uk-open">
+                        <!-- Graph -->
+                        <h3 class="uk-accordion-title">Graph of Blood Pressure Over Time</h3>
+                        <div class="uk-accordion-content">
+                            <canvas id="myChart"></canvas>
+                            <script src="bpchart.js"></script>
+                        </div>
+                    </li>
+
+                    <!-- Data input -->
                     <li>
                         <h3 class="uk-accordion-title">Add Blood Pressure Measurement</h3>
                         <div class="uk-accordion-content">
