Minor UI tweaks
* Button definition
* Accordian's are all open at load

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
                 <ul uk-accordion>
 
                     <!-- Data input -->
-                    <li>
+                    <li class="uk-open">
                         <h3 class="uk-accordion-title">Add Blood Pressure Measurement</h3>
                         <div class="uk-accordion-content">
                             <form class="uk-form-horizontal uk-margin-small">
@@ -34,7 +34,7 @@
                                             <input class="uk-input uk-form-width-small" id="form-horizontal-text" type="number" placeholder="80">
                                         </div>
                                     </div>
-                                    <button id="submit" class="uk-button uk-button-default">Submit</button>
+                                    <input type="button" id="submit" class="uk-button uk-button-primary" value="Submit">
                                 </fieldset>
                             </form>
                         </div>
