--- a/static/index.html
+++ b/static/index.html
@@ -70,6 +70,21 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Spinner Modal -->
+            <div id="spinnerModal" uk-modal="esc-close: false; bg-close: false;">
+                <div class="uk-modal-dialog uk-modal-body uk-width-1-6">
+                    <div uk-spinner></div>
+                    <div uk-spinner class="uk-align-right"></div>
+                </div>
+            </div>
+
+            <!-- Done Modal -->
+            <div id="doneModal" uk-modal>
+                <div class="uk-modal-dialog uk-modal-body uk-width-1-6">
+                    <h2 class="uk-modal-title uk-align-center">Done!</h2>
+                </div>
+            </div>
         </div>
     </body>
 </html>
