Add failure modal

--- a/static/index.html
+++ b/static/index.html
@@ -85,6 +85,14 @@
                     <h2 class="uk-modal-title uk-align-center">Done!</h2>
                 </div>
             </div>
+
+            <!-- Failure Modal -->
+            <div id="doneModal" uk-modal>
+                <div class="uk-modal-dialog uk-modal-body uk-width-1-6">
+                    <h2 class="uk-modal-title uk-align-center">Whoops...</h2>
+		    <p>Looks like something went wrong trying to store those results.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
