--- a/static/index.html
+++ b/static/index.html
@@ -14,8 +14,11 @@
         <!-- jquery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <!-- Blood pressure graph -->
+        <!-- BP Chart API -->
         <script src="bpchart.js"></script>
+
+        <!-- Modals API -->
+        <script src="modals.js"></script>
 
         <!-- Page -->
         <script src="main.js"></script>
@@ -65,7 +68,7 @@
                     <li class="uk-open">
                         <h3 class="uk-accordion-title">Graph of Blood Pressure Over Time</h3>
                         <div class="uk-accordion-content">
-                            <canvas id="myChart"></canvas>
+                            <canvas id="bpChart"></canvas>
                         </div>
                     </li>
                 </ul>
@@ -87,10 +90,10 @@
             </div>
 
             <!-- Failure Modal -->
-            <div id="doneModal" uk-modal>
-                <div class="uk-modal-dialog uk-modal-body uk-width-1-6">
+            <div id="failureModal" uk-modal>
+                <div class="uk-modal-dialog uk-modal-body uk-width-1-3">
                     <h2 class="uk-modal-title uk-align-center">Whoops...</h2>
-		    <p>Looks like something went wrong trying to store those results.</p>
+		                <p>Looks like something went wrong. Come and find me <3</p>
                 </div>
             </div>
         </div>
