Hook up graph with API data set

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
                 <ul uk-accordion>
 
                     <!-- Data input -->
-                    <li class="uk-open">
+                    <li>
                         <h3 class="uk-accordion-title">Add Blood Pressure Measurement</h3>
                         <div class="uk-accordion-content">
                             <form class="uk-form-horizontal uk-margin-small">
@@ -37,13 +37,13 @@
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="form-horizontal-text">High</label>
                                         <div class="uk-form-controls">
-                                            <input class="uk-input uk-form-width-small" id="highInput" type="number" value="120">
+                                            <input class="uk-input uk-form-width-small" id="systolicInput" type="number" value="120">
                                         </div>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="form-horizontal-text">Low</label>
                                         <div class="uk-form-controls">
-                                            <input class="uk-input uk-form-width-small" id="lowInput" type="number" value="80">
+                                            <input class="uk-input uk-form-width-small" id="diastolicInput" type="number" value="80">
                                         </div>
                                     </div>
                                     <div class="uk-margin">
