--- a/static/index.html
+++ b/static/index.html
@@ -15,13 +15,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
         <!-- BP Chart API -->
-        <script src="bpchart.js"></script>
+        <script src="/static/bpchart.js"></script>
 
         <!-- Modals API -->
-        <script src="modals.js"></script>
+        <script src="/static/modals.js"></script>
 
         <!-- Page -->
-        <script src="main.js"></script>
+        <script src="/static/main.js"></script>
     </head>
     <body>
         <div class="uk-container">
