Close form after successful submission

--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="uk-container">
             <div class="uk-card uk-card-default uk-card-hover uk-card-body">
-                <ul uk-accordion>
+                <ul id="addBPAccordion" uk-accordion>
 
                     <!-- Data input -->
                     <li>
@@ -63,7 +63,7 @@
             <br/>
 
             <div class="uk-card uk-card-default uk-card-hover uk-card-body">
-                <ul uk-accordion>
+                <ul id="graphAccordion" uk-accordion>
                     <!-- Graph -->
                     <li class="uk-open">
                         <h3 class="uk-accordion-title">Graph of Blood Pressure Over Time</h3>
