--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,8 @@
             <div id="failureModal" uk-modal>
                 <div class="uk-modal-dialog uk-modal-body uk-width-1-3">
                     <h2 class="uk-modal-title uk-align-center">Whoops...</h2>
-                    <p>Looks like something went wrong. Come and find me <3</p>
+                    <p id="errorText"></p>
+                    <p>If there's nothing here or it all looks like gibberish, come find me <3</p>
                 </div>
             </div>
         </div>
